--- a/pomato_v2.0/index.html
+++ b/pomato_v2.0/index.html
@@ -119,29 +119,31 @@ Desc: Pomato main Index.html, here all the
             <h1 class="title-big">Shop at your Doorstep</h1>
             <h2 class="subtitle-big">Economic | Fresh | Choice | Convenient </h2>
           </div>
-          <div class='col-md-6'>
-            <p> Coming soon on </p>
-            <img src="assets/img/backgrounds/appstore2.png" class='appstore'>
-            <h4 class="or">
-              <span>OR</span>
-            </h4>
-            <div id="append-data">
-              <div class="intl-tel-input">
-                  <div class="phone-icon" style="display: block;"><i title="Enter your mobile number" class="fa fa-mobile fa-lg"></i></div>
-                  <div class="code" style="display: none;">+91</div>
-                  <div>
-                      <input type="tel" id="user-phone-value" placeholder="Phone number" maxlength="10" onkeypress="return event.charCode > 47 &amp;&amp; event.charCode < 58;" pattern="[0-9]{5}" onkeydown="if (event.keyCode == 13) $('.get-app').click()">
-                  </div>
+          <div class="col-md-12">
+            <div class='col-md-6 text-center'>
+              <p> Coming soon on </p>
+              <img src="assets/img/backgrounds/appstore2.png" class='appstore'>
+              <h4 class="or">
+                <span>OR</span>
+              </h4>
+              <div id="append-data">
+                <div class="intl-tel-input">
+                    <div class="phone-icon" style="display: block;"><i title="Enter your mobile number" class="fa fa-mobile fa-lg"></i></div>
+                    <div class="code" style="display: none;">+91</div>
+                    <div>
+                        <input type="tel" id="user-phone-value" placeholder="Phone number" maxlength="10" onkeypress="return event.charCode > 47 &amp;&amp; event.charCode < 58;" pattern="[0-9]{5}" onkeydown="if (event.keyCode == 13) $('.get-app').click()">
+                    </div>
+                </div>
+                <button title="and chill" id="get-app-button" type="submit" class="get-app btn fixwidth">Register</button>
               </div>
-              <button title="and chill" id="get-app-button" type="submit" class="get-app btn fixwidth">Register</button>
-          </div>
-          <div class="text-center">
-              <img src="loading.gif" class="loader">
-          </div>
-          <div clasa="error-msgs"></div>
-          </div>
-          <div class='col-md-6'>
-            <img src="assets/img/backgrounds/pomato-iphone-app.png" class="iphone-app">
+              <div class="text-center">
+                  <img src="loading.gif" class="loader">
+              </div>
+              <div clasa="error-msgs"></div>
+            </div>
+            <div class='col-md-6 text-center'>
+              <img src="assets/img/backgrounds/pomato-iphone-app.png" class="iphone-app">
+            </div>
           </div>
         </div>
       </div>
@@ -186,7 +188,7 @@ Desc: Pomato main Index.html, here all the
         // };
         
         $('.loader').css('visibility', 'visible');
-        var url = "https://control.msg91.com/sendhttp.php";
+        var url = "https://control.msg91.com/sendhttp.php/";
         // if (window.location.search!=undefined && window.location.search!=""){
         //     var campaignCode = window.location.search;
         //     url = 'https://api.grofers.com/v2/' + 'accounts/sms_sign_up/' + campaignCode;
@@ -382,7 +384,7 @@ Desc: Pomato main Index.html, here all the
         <div class="carousel slide" id="testimonialCarousel">
           <div class="carousel-inner" role="listbox">
             <div class="item active">
-              <div class="col-md-4 col-sm-4 col-lg-4 col-xs-12 footer-grid text-center">
+              <div class="col-md-4 col-sm-12 col-lg-4 col-xs-12 footer-grid text-center">
                 <div class="card">
                   <div class="photo">
                     <img src="assets/img/testimonial/uncle.jpg">
@@ -399,7 +401,7 @@ Desc: Pomato main Index.html, here all the
               </div>
             </div>
             <div class="item">
-              <div class="col-md-4 col-sm-4 col-lg-4 col-xs-12 footer-grid text-center">
+              <div class="col-md-4 col-sm-12 col-lg-4 col-xs-12 footer-grid text-center">
                 <div class="card">
                   <div class="photo">
                     <img src="assets/img/testimonial/family.jpg">
@@ -417,7 +419,7 @@ Desc: Pomato main Index.html, here all the
               </div>
             </div>
             <div class="item">
-              <div class="col-md-4 col-sm-4 col-lg-4 col-xs-12 footer-grid text-center">
+              <div class="col-md-4 col-sm-12 col-lg-4 col-xs-12 footer-grid text-center">
                 <div class="card">
                   <div class="photo">
                     <img src="assets/img/testimonial/work-prof.jpg">
@@ -435,7 +437,7 @@ Desc: Pomato main Index.html, here all the
               </div>
             </div>
             <div class="item">
-              <div class="col-md-4 col-sm-4 col-lg-4 col-xs-12 footer-grid text-center">
+              <div class="col-md-4 col-sm-12 col-lg-4 col-xs-12 footer-grid text-center">
                 <div class="card">
                   <div class="photo">
                     <img src="assets/img/testimonial/student.jpg">
@@ -485,10 +487,10 @@ Desc: Pomato main Index.html, here all the
   <!--Copyright starts here-->
   <div class="copyright">
     <div class="container">
-      <div class="col-md-4 col-xs-12">
+      <div class="col-md-4 col-xs-12 text-center">
         <h3>support@pomato.in</h3>
       </div>
-      <div class="col-md-4 col-xs-12">
+      <div class="col-md-4 col-xs-12 text-center">
         <h4>&copy; Copyright 2015 Pomato Technologies Pvt. Ltd. </h4>
         <h5>All Rights Reserved</h5>
         <div>
